spacing issue bugfix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,7 +145,8 @@ body {
     /* padding-bottom: 200px; */
     padding-left: 185px;
     padding-top: 225px;
-    position: relative
+    position: relative; 
+    padding-bottom: 20vh; 
 }
 
 .error-404 .top.wrapper {
